Add Detect route
